fix some issues write function truncate in Helper

--- a/public/css/app/main.css
+++ b/public/css/app/main.css
@@ -605,8 +605,9 @@ input:focus {
 
 #flash-message {
     position:fixed;
-    bottom:60px;
-    width:120%;
+    bottom:10px;
+    left: 10px;
+    width:20%;
     z-index:105;
     text-align:center;
     font-weight:normal;
